--- a/wrangler.toml
+++ b/wrangler.toml
@@ -13,13 +13,13 @@ TARGET_UPSTREAM = "https://registry-1.docker.io"
 [env.production]
 name = "cloudflare-docker-proxy"
 # routes = [
-#   { pattern = "docker.libcuda.so", custom_domain = true },
-#   { pattern = "quay.libcuda.so", custom_domain = true },
-#   { pattern = "gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s-gcr.libcuda.so", custom_domain = true },
-#   { pattern = "k8s.libcuda.so", custom_domain = true },
-#   { pattern = "ghcr.libcuda.so", custom_domain = true },
-#   { pattern = "cloudsmith.libcuda.so", custom_domain = true },
+#   { pattern = "docker.acezy.top", custom_domain = true },
+#   { pattern = "quay.acezy.top", custom_domain = true },
+#   { pattern = "gcr.acezy.top", custom_domain = true },
+#   { pattern = "k8s-gcr.acezy.top", custom_domain = true },
+#   { pattern = "k8s.acezy.top", custom_domain = true },
+#   { pattern = "ghcr.acezy.top", custom_domain = true },
+#   { pattern = "cloudsmith.acezy.top", custom_domain = true },
 # ]
 
 [env.production.vars]
